<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="zurche.simplecalculator.calculator.CalculatorViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <!-- Invisible Components -->

        <android.support.constraint.Guideline
            android:id="@+id/operation_steps_area_divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <android.support.constraint.Guideline
            android:id="@+id/operation_result_dividing_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <android.support.constraint.Guideline
            android:id="@+id/first_pad_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.44" />

        <android.support.constraint.Guideline
            android:id="@+id/second_pad_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.58" />

        <android.support.constraint.Guideline
            android:id="@+id/third_pad_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.72" />

        <android.support.constraint.Guideline
            android:id="@+id/fourth_pad_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.86" />

        <android.support.constraint.Guideline
            android:id="@+id/first_pad_column"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25" />

        <android.support.constraint.Guideline
            android:id="@+id/second_pad_column"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <android.support.constraint.Guideline
            android:id="@+id/third_pad_column"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <!-- Visible Components -->

        <!-- Results Area -->
        <TextView
            android:id="@+id/operation"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/montserrat"
            android:gravity="end"
            android:textColor="@android:color/white"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@id/operation_steps_area_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="15x32+165/4+56+8+1"
            android:text="@{viewModel.getCurrentExpression}"/>

        <TextView
            android:id="@+id/operation_result"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/montserrat"
            android:gravity="end"
            android:textColor="@android:color/white"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@id/operation_result_dividing_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/operation_steps_area_divider"
            tools:text="15"
            android:text="@{viewModel.getResult}"/>

        <!-- First Pad Row -->
        <TextView
            android:id="@+id/ac"
            style="@style/PadItem.Main"
            android:text="@string/ac"
            app:layout_constraintBottom_toTopOf="@id/first_pad_row"
            app:layout_constraintEnd_toStartOf="@id/first_pad_column"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/operation_result_dividing_guideline"
            android:onClick="@{() -> viewModel.onClearExpression()}"/>

        <TextView
            android:id="@+id/plus_minus_switch"
            style="@style/PadItem.Main"
            android:text="@string/value_update"
            app:layout_constraintBottom_toTopOf="@id/first_pad_row"
            app:layout_constraintEnd_toStartOf="@id/second_pad_column"
            app:layout_constraintStart_toStartOf="@+id/first_pad_column"
            app:layout_constraintTop_toTopOf="@id/operation_result_dividing_guideline"
            android:onClick="@{() -> viewModel.onExpressionSignChange()}"/>

        <TextView
            android:id="@+id/percentage"
            style="@style/PadItem.Main"
            android:text="@string/percentage"
            app:layout_constraintBottom_toTopOf="@id/first_pad_row"
            app:layout_constraintEnd_toStartOf="@+id/third_pad_column"
            app:layout_constraintStart_toStartOf="@+id/second_pad_column"
            app:layout_constraintTop_toTopOf="@id/operation_result_dividing_guideline"
            android:onClick="@{() -> viewModel.onOperatorAdd(@string/percentage)}"/>

        <TextView
            android:id="@+id/divide"
            style="@style/PadItem.Operator"
            android:text="@string/divide"
            android:textSize="45sp"
            app:layout_constraintBottom_toTopOf="@id/first_pad_row"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/third_pad_column"
            app:layout_constraintTop_toTopOf="@id/operation_result_dividing_guideline"
            android:onClick="@{() -> viewModel.onOperatorAdd(@string/divide_operator)}"/>

        <!-- Second Pad Row -->
        <TextView
            android:id="@+id/seven"
            style="@style/PadItem.Number"
            android:text="@string/seven"
            app:layout_constraintBottom_toTopOf="@id/second_pad_row"
            app:layout_constraintEnd_toEndOf="@id/first_pad_column"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/first_pad_row"
            android:onClick="@{() -> viewModel.onOperatorAdd(@string/seven)}"/>

        <TextView
            android:id="@+id/eight"
            style="@style/PadItem.Number"
            android:text="@string/eight"
            app:layout_constraintBottom_toTopOf="@id/second_pad_row"
            app:layout_constraintEnd_toEndOf="@id/second_pad_column"
            app:layout_constraintStart_toStartOf="@id/first_pad_column"
            app:layout_constraintTop_toTopOf="@id/first_pad_row"
            android:onClick="@{() -> viewModel.onOperatorAdd(@string/eight)}"/>

        <TextView
            android:id="@+id/nine"
            style="@style/PadItem.Number"
            android:text="@string/nine"
            app:layout_constraintBottom_toTopOf="@id/second_pad_row"
            app:layout_constraintEnd_toEndOf="@id/third_pad_column"
            app:layout_constraintStart_toStartOf="@id/second_pad_column"
            app:layout_constraintTop_toTopOf="@id/first_pad_row"
            android:onClick="@{() -> viewModel.onOperatorAdd(@string/nine)}"/>

        <TextView
            android:id="@+id/multiply"
            style="@style/PadItem.Operator"
            android:text="@string/multiply"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@id/second_pad_row"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/third_pad_column"
            app:layout_constraintTop_toTopOf="@id/first_pad_row"
            android:onClick="@{() -> viewModel.onOperatorAdd(@string/multiply_expression)}"/>

        <!-- Third Pad Row -->
        <TextView
            android:id="@+id/four"
            style="@style/PadItem.Number"
            android:text="@string/four"
            app:layout_constraintBottom_toTopOf="@id/third_pad_row"
            app:layout_constraintEnd_toEndOf="@id/first_pad_column"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/second_pad_row"
            android:onClick="@{() -> viewModel.onOperatorAdd(@string/four)}"/>

        <TextView
            android:id="@+id/five"
            style="@style/PadItem.Number"
            android:text="@string/five"
            app:layout_constraintBottom_toTopOf="@id/third_pad_row"
            app:layout_constraintEnd_toEndOf="@id/second_pad_column"
            app:layout_constraintStart_toStartOf="@id/first_pad_column"
            app:layout_constraintTop_toTopOf="@id/second_pad_row"
            android:onClick="@{() -> viewModel.onOperatorAdd(@string/five)}"/>

        <TextView
            android:id="@+id/six"
            style="@style/PadItem.Number"
            android:text="@string/six"
            app:layout_constraintBottom_toTopOf="@id/third_pad_row"
            app:layout_constraintEnd_toEndOf="@id/third_pad_column"
            app:layout_constraintStart_toStartOf="@id/second_pad_column"
            app:layout_constraintTop_toTopOf="@id/second_pad_row"
            android:onClick="@{() -> viewModel.onOperatorAdd(@string/six)}"/>

        <TextView
            android:id="@+id/plus"
            style="@style/PadItem.Operator"
            android:text="@string/plus"
            android:textSize="45sp"
            app:layout_constraintBottom_toTopOf="@id/third_pad_row"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/third_pad_column"
            app:layout_constraintTop_toTopOf="@id/second_pad_row"
            android:onClick="@{() -> viewModel.onOperatorAdd(@string/plus)}"/>

        <!-- Fourth Pad Row -->
        <TextView
            android:id="@+id/one"
            style="@style/PadItem.Number"
            android:text="@string/one"
            app:layout_constraintBottom_toTopOf="@id/fourth_pad_row"
            app:layout_constraintEnd_toEndOf="@id/first_pad_column"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/third_pad_row"
            android:onClick="@{() -> viewModel.onOperatorAdd(@string/one)}"/>

        <TextView
            android:id="@+id/two"
            style="@style/PadItem.Number"
            android:text="@string/two"
            app:layout_constraintBottom_toTopOf="@id/fourth_pad_row"
            app:layout_constraintEnd_toEndOf="@id/second_pad_column"
            app:layout_constraintStart_toStartOf="@id/first_pad_column"
            app:layout_constraintTop_toTopOf="@id/third_pad_row"
            android:onClick="@{() -> viewModel.onOperatorAdd(@string/two)}"/>

        <TextView
            android:id="@+id/three"
            style="@style/PadItem.Number"
            android:text="@string/three"
            app:layout_constraintBottom_toTopOf="@id/fourth_pad_row"
            app:layout_constraintEnd_toEndOf="@id/third_pad_column"
            app:layout_constraintStart_toStartOf="@id/second_pad_column"
            app:layout_constraintTop_toTopOf="@id/third_pad_row"
            android:onClick="@{() -> viewModel.onOperatorAdd(@string/three)}"/>

        <TextView
            android:id="@+id/minus"
            style="@style/PadItem.Operator"
            android:text="@string/minus"
            android:textSize="45sp"
            app:layout_constraintBottom_toTopOf="@id/fourth_pad_row"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/third_pad_column"
            app:layout_constraintTop_toTopOf="@id/third_pad_row"
            android:onClick="@{() -> viewModel.onOperatorAdd(@string/minus)}"/>

        <!-- Fifth Pad Row -->
        <TextView
            android:id="@+id/zero"
            style="@style/PadItem.Number"
            android:text="@string/zero"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/first_pad_column"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/fourth_pad_row"
            android:onClick="@{() -> viewModel.onOperatorAdd(@string/zero)}"/>

        <TextView
            android:id="@+id/comma"
            style="@style/PadItem.Number"
            android:text="@string/comma"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/second_pad_column"
            app:layout_constraintStart_toStartOf="@id/first_pad_column"
            app:layout_constraintTop_toTopOf="@id/fourth_pad_row"
            android:onClick="@{() -> viewModel.onOperatorAdd(@string/comma_expression)}"/>

        <TextView
            android:id="@+id/equals"
            style="@style/PadItem.Main"
            android:text="@string/equals"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/second_pad_column"
            app:layout_constraintTop_toTopOf="@id/fourth_pad_row"
            android:onClick="@{() -> viewModel.onCalculateResult()}"/>

    </android.support.constraint.ConstraintLayout>
</layout>
